# order-management-service

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  start.sh
migrations/: env.py
migrations/versions/: 4eacf8df1489_init.py  e59b5c79984c_init.py
src/order_management_service/: main.py
src/order_management_service/api/: auth.py  orders.py
src/order_management_service/core/: database.py  kafka.py  rate_limiter.py  redis.py  security.py  settings.py  tasks.py
src/order_management_service/models/: order.py  user.py
src/order_management_service/repositories/: order_repository.py  user_repository.py
src/order_management_service/schemas/: order.py  user.py
src/order_management_service/services/: auth_service.py  order_consumer.py  order_service.py
tests/: conftest.py  test_auth.py  test_health.py  test_orders.py
